# AiZO-Projekt2

./: CMakeLists.txt  main.cpp
Source/Algorithms/: FordFulkersonAlgorithm.cpp  FordFulkersonAlgorithm.h
Source/Algorithms/AlgorithmsCpp/: BellmanFordAlgorithm.cpp  DijkstraAlgorithm.cpp  FordFulkersonAlgorithm.cpp  KruskalAlgorithm.cpp  PrimAlgorithm.cpp
Source/Algorithms/AlgorithmsHeadings/: Algorithm.h  BellmanFordAlgorithm.h  DijkstraAlgorithm.h  FordFulkersonAlgorithm.h  KruskalAlgorithm.h  PrimAlgorithm.h
Source/Graphs/GraphCpp/: Graph.cpp  ListGraph.cpp  MatrixGraph.cpp
Source/Graphs/GraphHeadings/: Graph.h  ListGraph.h  MatrixGraph.h
